docs/docusaurus/versioned_docs/version-0.17/reference/api/expectations/expectation/QueryExpectation_class.mdx
---
title: QueryExpectation
sidebar_label: QueryExpectation
---


<section class="sphinx-api-doc" id="queryexpectation">

<dl class="py class">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation">
<em class="property"><span class="pre">class</span><span class="w"> </span></em><span class="sig-prename descclassname"><span class="pre">great_expectations.expectations.expectation.</span></span><span class="sig-name descname"><span class="pre">QueryExpectation</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">configuration</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/core/ExpectationConfiguration_class#great_expectations.core.ExpectationConfiguration" title="great_expectations.core.expectation_configuration.ExpectationConfiguration"><span class="pre">great_expectations.core.expectation_configuration.ExpectationConfiguration</span></a><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em><span class="sig-paren">)</span><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Base class for QueryExpectations.</p>
<p>QueryExpectations facilitate the execution of SQL or Spark-SQL queries as the core logic for an Expectation.</p>
<p>QueryExpectations must implement a <cite>_validate(…)</cite> method containing logic for determining whether data returned by the executed query is successfully validated.</p>
<p>Query Expectations may optionally provide implementations of:</p>
<ol class="arabic simple">
<li><p><cite>validate_configuration</cite>, which should raise an error if the configuration will not be usable for the Expectation.</p></li>
<li><p>Data Docs rendering methods decorated with the @renderer decorator.</p></li>
</ol>
<p>QueryExpectations may optionally define a <cite>query</cite> attribute, and specify that query as a default in <cite>default_kwarg_values</cite>.</p>
<p>Doing so precludes the need to pass a query into the Expectation. This default will be overridden if a query is passed in.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><ul class="simple">
<li><p><strong>domain_keys</strong> (<em>tuple</em>) – A tuple of the keys used to determine the domain of the
expectation.</p></li>
<li><p><strong>success_keys</strong> (<em>tuple</em>) – A tuple of the keys used to determine the success of
the expectation.</p></li>
<li><p><strong>runtime_keys</strong> (<em>optional</em><em>[</em><em>tuple</em><em>]</em>) – Optional. A tuple of the keys that can be used to control output but will
not affect the actual success value of the expectation (such as result_format).</p></li>
<li><p><strong>default_kwarg_values</strong> (<em>optional</em><em>[</em><em>dict</em><em>]</em>) – Optional. A dictionary that will be used to fill unspecified
kwargs from the Expectation Configuration.</p></li>
<li><p><strong>query</strong> (<em>optional</em><em>[</em><em>str</em><em>]</em>) – Optional. A SQL or Spark-SQL query to be executed. If not provided, a query must be passed
into the QueryExpectation.</p></li>
</ul>
</dd>
</dl>
<dl class="simple">
<dt>Relevant Documentation Links

</dt>
<dd><ul class="simple">
<li><p><a class="reference external" href="https://docs.greatexpectations.io/docs/guides/expectations/creating_custom_expectations/how_to_create_custom_query_expectations">How To Create Custom Query Expectations</a></p></li>
</ul>
</dd>
</dl>
<dl class="py attribute">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation.domain_type">
<span class="sig-name descname"><span class="pre">domain_type</span></span><em class="property"><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="pre">ClassVar</span></em><em class="property"><span class="w"> </span><span class="p"><span class="pre">=</span></span><span class="w"> </span><span class="pre">'table'</span></em><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation.domain_type" title="Permalink to this definition">#</a>
</dt>

<dd></dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation.get_success_kwargs">
<span class="sig-name descname"><span class="pre">get_success_kwargs</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">configuration</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/core/ExpectationConfiguration_class#great_expectations.core.ExpectationConfiguration" title="great_expectations.core.expectation_configuration.ExpectationConfiguration"><span class="pre">great_expectations.core.expectation_configuration.ExpectationConfiguration</span></a><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">Dict</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">,</span></span><span class="w"> </span><span class="pre">Any</span><span class="p"><span class="pre">]</span></span></span></span><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation.get_success_kwargs" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Retrieve the success kwargs.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><p><strong>configuration</strong> – The <cite>ExpectationConfiguration</cite> that contains the kwargs. If no configuration arg is provided,
the success kwargs from the configuration attribute of the Expectation instance will be returned.</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation.print_diagnostic_checklist">
<span class="sig-name descname"><span class="pre">print_diagnostic_checklist</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">diagnostics</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">great_expectations.core.expectation_diagnostics.expectation_diagnostics.ExpectationDiagnostics</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">show_failed_tests</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">backends</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">List</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">]</span></span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">show_debug_messages</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">str</span></span></span><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation.print_diagnostic_checklist" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Runs self.run_diagnostics and generates a diagnostic checklist.</p>
<p>This output from this method is a thin wrapper for ExpectationDiagnostics.generate_checklist()
This method is experimental.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><ul class="simple">
<li><p><strong>diagnostics</strong> (<em>optional</em><em>[</em><em>ExpectationDiagnostics</em><em>]</em>) – If diagnostics are not provided, diagnostics will be ran on self.</p></li>
<li><p><strong>show_failed_tests</strong> (<em>bool</em>) – If true, failing tests will be printed.</p></li>
<li><p><strong>backends</strong> – list of backends to pass to run_diagnostics</p></li>
<li><p><strong>show_debug_messages</strong> (<em>bool</em>) – If true, create a logger and pass to run_diagnostics</p></li>
</ul>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation.run_diagnostics">
<span class="sig-name descname"><span class="pre">run_diagnostics</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">raise_exceptions_for_backends</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">ignore_suppress</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">ignore_only_for</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">for_gallery</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">False</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">debug_logger</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">logging.Logger</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">only_consider_these_backends</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">List</span><span class="p"><span class="pre">[</span></span><span class="pre">str</span><span class="p"><span class="pre">]</span></span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">context</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/data_context/AbstractDataContext_class#great_expectations.data_context.AbstractDataContext" title="great_expectations.data_context.AbstractDataContext"><span class="pre">AbstractDataContext</span></a><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><span class="pre">ExpectationDiagnostics</span></span></span><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation.run_diagnostics" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Produce a diagnostic report about this Expectation.</p>
<p>The current uses for this method’s output are
using the JSON structure to populate the Public Expectation Gallery
and enabling a fast dev loop for developing new Expectations where the
contributors can quickly check the completeness of their expectations.</p>
<p>The contents of the report are captured in the ExpectationDiagnostics dataclass.
You can see some examples in test_expectation_diagnostics.py</p>
<p>Some components (e.g. description, examples, library_metadata) of the diagnostic report can be introspected directly from the Exepctation class.
Other components (e.g. metrics, renderers, executions) are at least partly dependent on instantiating, validating, and/or executing the Expectation class.
For these kinds of components, at least one test case with include_in_gallery=True must be present in the examples to
produce the metrics, renderers and execution engines parts of the report. This is due to
a get_validation_dependencies requiring expectation_config as an argument.</p>
<p>If errors are encountered in the process of running the diagnostics, they are assumed to be due to
incompleteness of the Expectation’s implementation (e.g., declaring a dependency on Metrics
that do not exist). These errors are added under “errors” key in the report.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><ul class="simple">
<li><p><strong>raise_exceptions_for_backends</strong> – Bool object that when True will raise an Exception if a backend fails to connect.</p></li>
<li><p><strong>ignore_suppress</strong> – Bool object that when True will ignore the suppress_test_for list on Expectation sample tests.</p></li>
<li><p><strong>ignore_only_for</strong> – Bool object that when True will ignore the only_for list on Expectation sample tests.</p></li>
<li><p><strong>for_gallery</strong> – Bool object that when True will create empty arrays to use as examples for the Expectation Diagnostics.</p></li>
<li><p><strong>debug_logger</strong> (<em>optional</em><em>[</em><em>logging.Logger</em><em>]</em>) – Logger object to use for sending debug messages to.</p></li>
<li><p><strong>only_consider_these_backends</strong> (<em>optional</em><em>[</em><em>List</em><em>[</em><em>str</em><em>]</em><em>]</em>) – </p></li>
<li><p><strong>context</strong> (<em>optional</em><em>[</em><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/data_context/AbstractDataContext_class#great_expectations.data_context.AbstractDataContext" title="great_expectations.data_context.AbstractDataContext"><em>AbstractDataContext</em></a><em>]</em>) – Instance of any child of “AbstractDataContext” class.</p></li>
</ul>
</dd>
<dt class="field-even">Returns
</dt>

<dd class="field-even"><p>An Expectation Diagnostics report object</p>
</dd>
</dl>
</dd></dl>
<dl class="py method">
<dt class="sig sig-object py" id="great_expectations.expectations.expectation.QueryExpectation.validate">
<span class="sig-name descname"><span class="pre">validate</span></span><span class="sig-paren">(</span><em class="sig-param"><span class="n"><span class="pre">validator</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/validator/validator/Validator_class#great_expectations.validator.validator.Validator" title="great_expectations.validator.validator.Validator"><span class="pre">Validator</span></a></span></em>, <em class="sig-param"><span class="n"><span class="pre">configuration</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/core/ExpectationConfiguration_class#great_expectations.core.ExpectationConfiguration" title="great_expectations.core.ExpectationConfiguration"><span class="pre">ExpectationConfiguration</span></a><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">evaluation_parameters</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">dict</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">interactive_evaluation</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">bool</span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">True</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">data_context</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/data_context/AbstractDataContext_class#great_expectations.data_context.AbstractDataContext" title="great_expectations.data_context.AbstractDataContext"><span class="pre">AbstractDataContext</span></a><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em>, <em class="sig-param"><span class="n"><span class="pre">runtime_configuration</span></span><span class="p"><span class="pre">:</span></span><span class="w"> </span><span class="n"><span class="pre">Optional</span><span class="p"><span class="pre">[</span></span><span class="pre">dict</span><span class="p"><span class="pre">]</span></span></span><span class="w"> </span><span class="o"><span class="pre">=</span></span><span class="w"> </span><span class="default_value"><span class="pre">None</span></span></em><span class="sig-paren">)</span> <span class="sig-return"><span class="sig-return-icon">→</span> <span class="sig-return-typehint"><a class="reference internal" href="https://docs.greatexpectations.io/docs/0.17.23/reference/api/core/ExpectationValidationResult_class#great_expectations.core.ExpectationValidationResult" title="great_expectations.core.ExpectationValidationResult"><span class="pre">ExpectationValidationResult</span></a></span></span><a class="headerlink" href="#great_expectations.expectations.expectation.QueryExpectation.validate" title="Permalink to this definition">#</a>
</dt>

<dd>
<p>Validates the expectation against the provided data.</p>
<dl class="field-list simple">
<dt class="field-odd">Parameters
</dt>

<dd class="field-odd"><ul class="simple">
<li><p><strong>validator</strong> – A Validator object that can be used to create Expectations, validate Expectations,
and get Metrics for Expectations.</p></li>
<li><p><strong>configuration</strong> – Defines the parameters and name of a specific expectation.</p></li>
<li><p><strong>evaluation_parameters</strong> – Dictionary of dynamic values used during Validation of an Expectation.</p></li>
<li><p><strong>interactive_evaluation</strong> – Setting the interactive_evaluation flag on a DataAsset
make it possible to declare expectations and store expectations without
immediately evaluating them.</p></li>
<li><p><strong>data_context</strong> – An instance of a GX DataContext.</p></li>
<li><p><strong>runtime_configuration</strong> – The runtime configuration for the Expectation.</p></li>
</ul>
</dd>
<dt class="field-even">Returns
</dt>

<dd class="field-even"><p>An ExpectationValidationResult object</p>
</dd>
</dl>
</dd></dl>
</dd></dl>
</section>